--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -8,7 +8,7 @@
         <div class="content mb-4">
           {{ .Content }}
         </div>
-        <div class="row">
+        <!--<div class="row">
           <div class="col-lg-4 small-post-border">
             <i class="ti-mobile h1 text-primary"></i>
             <h5 class="font-weight-light my-3">Phone</h5>
@@ -24,7 +24,7 @@
             <h5 class="font-weight-light my-3">Location</h5>
             {{ .Site.Params.location | markdownify }}
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <h2 class="mb-4">Hi Write To Me</h2>
+        <h2 class="mb-4">Hey, what are you up to?</h2>
         <form action="#" method="POST" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" id="name" name="name" placeholder="Your Name">
