--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -28,8 +28,10 @@
       </div>
       {{ if or  .Site.Params.mobile .Site.Params.location .Site.Params.email }}         
       <div class="col-lg-3 col-sm-6 mb-5">
-        <h6 class="mb-4">Contact Me</h6>
+        <h6 class="mb-4">About Me</h6>
         <ul class="list-unstyled">
+          <li class="mb-3"><i class="ti-user mr-3 text-primary"></i>Shuta Suzuki</li>
+          <li class="mb-3"><i class="ti-bag mr-3 text-primary"></i>Cybersecurity Professional</li>
           {{ if .Site.Params.mobile }}
           <li class="mb-3"><a class="text-dark" href="tel:{{ .Site.Params.mobile }}"><i
                 class="ti-mobile mr-3 text-primary"></i>{{ .Site.Params.mobile }}</a></li>
