ADD: Google AdSense

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,4 +38,8 @@
     ga('send', 'pageview');
   </script>
 
+  <!--Google AdSense-->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
+     crossorigin="anonymous"></script>
+
 </head>
