--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -51,8 +51,24 @@
       </ul>
     </div>
     <!-- advertisement -->
-    <div class="widget">
+    <!--<div class="widget">
       <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
+    </div>-->
+
+    <!--Google AdSense-->
+    <div class="widget">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
+     crossorigin="anonymous"></script>
+      <!-- Sidebar Ad -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-5527616043979241"
+          data-ad-slot="3739069883"
+          data-ad-format="auto"
+          data-full-width-responsive="true"></ins>
+      <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
   </div>
 </div>
