ADD: Meta tag in header

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -42,4 +42,6 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
      crossorigin="anonymous"></script>
 
+  <meta content="Personal homepage of Shuta Suzuki, a cybersecurity professional based in New York City." name="description">
+  
 </head>
