MOD: Updated sitemap

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ .Site.Title }}</title>
+  <meta name="description" content="Official website for Shuta Suzuki, a cybersecurity professional based in New York City.">
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -41,7 +42,5 @@
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
      crossorigin="anonymous"></script>
-
-  <meta content="Official website for Shuta Suzuki, a cybersecurity professional based in New York City." name="description">
   
 </head>
