--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <h2 class="mb-4">Hey, what are you up to? // TODO: Message feature NOT implemented yet</h2>
+        <h2 class="mb-4">Hey, what are you up to?</h2>
         <form action="https://formspree.io/f/shutas@umich.edu" method="POST" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" id="name" name="name" placeholder="Your Name">
