ADD: Amazon Associates ads

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -55,6 +55,12 @@
       <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
     </div>-->
 
+    <!-- Amazon Associates -->
+    <div class="widget">
+      <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:120px;height:260px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=afdashuta-20&language=en_US&marketplace=amazon&region=US&placement=0128112484&asins=0128112484&linkId=7cf7b6eaac2f2aa1de11205bf0329eac&show_border=true&link_opens_in_new_window=true"></iframe>
+      <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:120px;height:260px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=US&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=afdashuta-20&language=en_US&marketplace=amazon&region=US&placement=1260142655&asins=1260142655&linkId=a1e82455cbbacbd0e17933791cb37d59&show_border=true&link_opens_in_new_window=true"></iframe>
+    </div>
+
     <!-- Google AdSense -->
     <div class="widget">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
