ADD: G-tag header

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,6 +38,16 @@
     ga('send', 'pageview');
   </script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7M1480WMY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D7M1480WMY');
+  </script>
+
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5527616043979241"
      crossorigin="anonymous"></script>
